--- a/Client/src/Components/Header/header.module.css
+++ b/Client/src/Components/Header/header.module.css
@@ -79,6 +79,7 @@ nav button {
     padding: 10px;
     text-transform: uppercase;
     font-size: 2rem;
+    font-weight: 600;
     text-align: center;
 }
 
@@ -87,8 +88,6 @@ nav button {
     background-color: rgba(255, 255, 255, 0.658);
     border-radius: 50%;
     color: var(--primary-color);
-    font-weight: bold;
-    padding: 10px 20px;
 }
 
 .logo {
