--- a/Client/src/pages/Admin/Form/form.module.css
+++ b/Client/src/pages/Admin/Form/form.module.css
@@ -16,9 +16,15 @@
     margin-left: 1rem;
 }
 
-.inputs{
+.inputs {
     border-radius: 3rem;
     padding: 1rem;
+    border-width: 2px; /* Add the desired border width */
+}
+
+.inputs.filled {
+    border-color: rgb(8, 220, 8); /* Add the green border color for the filled inputs */
+    border-width: 4px;
 }
 
 .btnSend {
