--- a/Client/src/pages/Tool/singleTool.module.css
+++ b/Client/src/pages/Tool/singleTool.module.css
@@ -1,3 +1,17 @@
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px;
+    background-color: #f0f1f5;
+    border: 3px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+    text-decoration: underline;
+}
+
 .section {
     margin: 2rem;
 }
