--- a/Client/src/pages/User/dashboard.module.css
+++ b/Client/src/pages/User/dashboard.module.css
@@ -1,22 +1,62 @@
-.ctn {
-    margin: 0 auto;
-    padding: 20px;
-    max-width: 800px;
-}
-
-.info {
-    border: 1px solid #ccc;
-    padding: 20px;
+.editForm {
     margin-top: 20px;
+    text-align: center; 
 }
 
-.info h3 {
-    margin-top: 0;
+.formGroup {
+    margin-bottom: 20px;
+    text-align: left; 
 }
 
-.loading {
-    font-size: 1.8rem;
+.formGroup label {
+    display: block;
+    margin-bottom: 5px;
     font-weight: bold;
-    text-align: center;
+}
+
+.formGroup input {
+    width: 100%;
+    padding: 8px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+.btnGroup {
+    display: flex;
+    justify-content: space-between;
     margin-top: 20px;
+}
+
+.btnSave, .btnCancel {
+    flex: 1;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btnSave {
+    background-color: #007BFF;
+    color: #fff;
+}
+
+.btnCancel {
+    background-color: #db4343;
+    color: #000;
+}
+
+.btnEdit {
+    background-color: #4CAF50;
+    color: #fff;
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btnSave:hover, .btnCancel:hover {
+    opacity: 0.8;
 }
