--- a/Client/src/pages/User/dashboard.module.css
+++ b/Client/src/pages/User/dashboard.module.css
@@ -1,6 +1,8 @@
 .editForm {
     margin-top: 20px;
     text-align: center; 
+    max-width: 800px;
+    margin: auto;
 }
 
 .formGroup {
@@ -17,7 +19,7 @@
 .formGroup input {
     width: 100%;
     padding: 8px;
-    font-size: 16px;
+    font-size: 1.6rem;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
@@ -31,7 +33,7 @@
 .btnSave, .btnCancel {
     flex: 1;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 1.6rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -51,7 +53,7 @@
     background-color: #4CAF50;
     color: #fff;
     padding: 10px 20px;
-    font-size: 16px;
+    font-size: 1.6rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
